--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0"
+    "babel-plugin-styled-components": "^1.8.0",
+    "eslint": "^7.20.0"
   },
   "license": "MIT"
 }
