--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "export": "next build && next export",
     "start": "next start",
-    "lint": "eslint --ignore-path .gitignore . --fix"
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
@@ -27,7 +27,13 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.1.2"
   },
+    "husky": {
+      "hooks": {
+        "pre-push": "yarn lint"
+      }
+    },
   "license": "MIT"
 }
