ci(lint): add commitlint to enforce conventional commit

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "export": "next build && next export",
     "start": "next start",
     "lint": "eslint --ignore-path .gitignore .",
-    "commit": "cz"
+    "commit": "git add . && cz"
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
@@ -22,6 +22,8 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "babel-plugin-styled-components": "^1.8.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.20.0",
@@ -34,7 +36,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn lint"
+      "pre-push": "yarn lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "config": {
