--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "export": "next build && next export",
     "start": "next start",
     "lint": "eslint --ignore-path .gitignore .",
-    "commit": "git add . && cz"
+    "commit": "cz",
+    "commit-all": "git add . && cz",
+    "test:integration:open":"cypress open"
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
@@ -25,9 +27,11 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "babel-plugin-styled-components": "^1.8.0",
+    "cypress": "^7.1.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
