--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "eslint --ignore-path .gitignore .",
     "commit": "cz",
     "commit-all": "git add . && cz",
-    "test:integration:open":"cypress open"
+    "test:integration:open": "cypress open"
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
     "framer-motion": "^4.1.2",
     "lodash": "^4.17.21",
     "next": "latest",
+    "nookies": "^2.5.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
