--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "eslint --ignore-path .gitignore .",
     "commit": "cz",
     "commit-all": "git add . && cz",
+    "test":"jest",
+    "test:watch":"jest --watch",
     "test:integration:open": "cypress open",
     "test:integration": "cypress run --headless"
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
+    "@types/jest": "^26.0.22",
+    "eslint-plugin-jest": "^24.3.5",
     "framer-motion": "^4.1.2",
+    "jest": "^26.6.3",
     "lodash": "^4.17.21",
     "next": "latest",
     "nookies": "^2.5.2",
