--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint --ignore-path .gitignore .",
     "commit": "cz",
     "commit-all": "git add . && cz",
-    "test":"jest",
-    "test:watch":"jest --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "test:integration:open": "cypress open",
     "test:integration": "cypress run --headless"
   },
@@ -33,6 +33,9 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/react-hooks": "^5.1.1",
     "babel-plugin-styled-components": "^1.8.0",
     "cypress": "^7.1.0",
     "cz-conventional-changelog": "3.3.0",
@@ -43,7 +46,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0"
+    "husky": "^6.0.0",
+    "jest-canvas-mock": "^2.3.1",
+    "jest-styled-components": "^7.0.3"
   },
   "husky": {
     "hooks": {
