--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
+    "@testing-library/user-event": "^13.1.5",
     "@types/jest": "^26.0.22",
     "eslint-plugin-jest": "^24.3.5",
     "framer-motion": "^4.1.2",
