--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/jest": "^26.0.22",
     "eslint-plugin-jest": "^24.3.5",
     "framer-motion": "^4.1.2",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "jest": "^26.6.3",
     "lodash": "^4.17.21",
     "next": "latest",
