--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "styled-components": "^5.2.3",
+    "styled-icons": "^10.33.0",
     "styled-normalize": "^8.0.7",
     "yup": "^0.32.9"
   },
